--- a/Calendarro/Views/Shared/_CalendarView3.cshtml
+++ b/Calendarro/Views/Shared/_CalendarView3.cshtml
@@ -1,5 +1,11 @@
 ﻿<div class="container">
-    <div id="calendar1"></div>
-    <div id="calendar2"></div>
-    <div id="calendar3"></div>
+    <div class="row">
+        <div id="calendar1"></div>
+    </div>
+    <div class="row">
+        <div id="calendar2"></div>
+    </div>
+    <div class="row">
+        <div id="calendar3"></div>
+    </div>
 </div>
