--- a/Calendarro/Views/Calendar/Index.cshtml
+++ b/Calendarro/Views/Calendar/Index.cshtml
@@ -29,6 +29,8 @@
     <link href="~/lib/fullcalendar/main.min.css" rel="stylesheet" />
     <script src="~/lib/fullcalendar/main.min.js"></script>
 
+    <script src="~/js/calendarMonthGenerator.js"></script>
+
     <script src="~/js/calendarViewSingle.js"></script>
     <script src="~/js/calendarViewTripple.js"></script>
     <script src="~/js/calendarViewHexagonal.js"></script>
