Polaczenie aktualnych postepow kalendarza z kanbanami

--- a/Calendarro/Views/Home/Index.cshtml
+++ b/Calendarro/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Calendarro.ViewModels.KanbanWithTasksViewModel>
+﻿@model Calendarro.ViewModels.MainViewModel
 @{
     ViewData["Title"] = "Calendarro";
 }
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="column" style="border-right: 5px solid dimgray">
             <div class="boards">
-                @foreach (var kanban in Model)
+                @foreach (var kanban in Model.KanbanWithTasks)
                 {
                     <div class="sqr">
                         <div class="title">
@@ -27,7 +27,7 @@
                             @foreach (var task in kanban.Tasks)
                             {
                                 <div>
-                                @task.TaskName
+                                    @task.TaskName
                                 </div>
                             }
                         </div>
@@ -36,14 +36,38 @@
             </div>
         </div>
         <div class="column" style="border-left: 5px solid dimgray">
-            <div class="calendar_buttons">
-                <div id="button1"><a href="#" class="btns">1</a></div>
-                <div id="button2"><a href="#" class="btns">3</a></div>
-                <div id="button3"><a href="#" class="btns">6</a></div>
-            </div>
+            @*<div class="calendar_buttons">
+                    <div id="button1"><a href="#" class="btns">1</a></div>
+                    <div id="button2"><a href="#" class="btns">3</a></div>
+                    <div id="button3"><a href="#" class="btns">6</a></div>
+                </div>
+                <div class="container">
+                    <div id="calendar"></div>
+                </div>*@
+
             <div class="container">
-                <div id="calendar"></div>
+                <button class="btn btn-outline-primary" id="calendaView-1">1</button>
+                <button class="btn btn-outline-primary" id="calendaView-3">3</button>
+                <button class="btn btn-outline-primary" id="calendaView-6">6</button>
             </div>
+
+            <div class="container" id="calendarContainer">
+
+                <div id="singleView">
+                    <partial name="_CalendarView1" />
+                </div>
+
+                <div id="trippleView" style="display:none">
+                    <partial name="_CalendarView3" />
+                </div>
+
+                <div id="hexagonalView" style="display:none">
+                    <partial name="_CalendarView6" />
+                </div>
+
+            </div>
+
+            <partial name="_AddTaskByCalendarModal" model="Model.AddNewTaskViewModel" />
 
         </div>
     </div>
@@ -54,28 +78,34 @@
     <link href="~/lib/fullcalendar/main.min.css" rel="stylesheet" />
     <script src="~/lib/fullcalendar/main.min.js"></script>
 
+    <script src="~/js/calendarMonthGenerator.js"></script>
+
+    <script src="~/js/calendarViewSingle.js"></script>
+    <script src="~/js/calendarViewTripple.js"></script>
+    <script src="~/js/calendarViewHexagonal.js"></script>
+
+    <script src="~/js/buttonViewChanger.js"></script>
+
 
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            var calendarEl = document.getElementById('calendar');
-
-            var calendar = new FullCalendar.Calendar(calendarEl, {
-                timeZone: 'UTC',
-                themeSystem: 'bootstrap',
-                headerToolbar: {
-                    left: '',
-                    center: '',
-                    right: ''
-                },
-                weekNumbers: false,
-                firstDay: '1',
-                fixedWeekCount: false,
-                themeSystem: 'bootstrap',
-                dayMaxEvents: false, // allow "more" link when too many events
-                events: 'http://localhost:5000/calendar/getalltasks?project=1'
-            });
-
-            calendar.render();
-        });
+        (function () {
+            'use strict';
+            window.addEventListener('load', function () {
+                // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                var forms = document.getElementsByClassName('needs-validation');
+                // Loop over them and prevent submission
+                var validation = Array.prototype.filter.call(forms, function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (form.checkValidity() === false) {
+                            event.preventDefault();
+                            event.stopPropagation();
+                        }
+                        form.classList.add('was-validated');
+                    }, false);
+                });
+            }, false);
+        })();
     </script>
+
+
 }
