--- a/Calendarro/Views/Project/AddNewProject.cshtml
+++ b/Calendarro/Views/Project/AddNewProject.cshtml
@@ -8,7 +8,7 @@
 
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 offset-md-4">
         <form asp-action="AddNewProject">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -26,8 +26,8 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group w-100 text-center">
+                <input type="submit" value="Stwórz" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -40,10 +40,10 @@
 @section Scripts{
 
     <script>
-        if(@ViewBag.StatusMessage != null)
+        @*if(@ViewBag.StatusMessage != null)
         {
             alert(@ViewBag.StatusMessage);
-        }
+        }*@
     </script>
 
 }
