Nowe przyciski dodaj i usuń

--- a/Calendarro/Views/Home/Index.cshtml
+++ b/Calendarro/Views/Home/Index.cshtml
@@ -19,8 +19,8 @@
                         <div class="dropdown" style="float: right;">
                             <button class="kanbandropbtn">...</button>
                             <div class="kanbandrop-content">
-                                <a href="#">+</a>
-                                <a href="#">-</a>
+                                <a href="#">Dodaj zadanie</a>
+                                <a href="#">Usuń kanban</a>
                             </div>
                         </div>
                         <div class="content">
