--- a/Calendarro/Views/Shared/_AddTaskByCalendarModal.cshtml
+++ b/Calendarro/Views/Shared/_AddTaskByCalendarModal.cshtml
@@ -11,7 +11,7 @@
             </div>
 
             @* TODO frontend poprawić tutaj *@
-            <form role="form" method="post" class="needs-validation" asp-controller="Calendar" asp-action="AddTask" id="modalForm">
+            <form role="form" method="post" class="needs-validation" asp-controller="Home" asp-action="AddNewTask" id="modalForm">
                 <div class="modal-body w-100 text-center">
                     <div class="text-danger" asp-validation-summary="ModelOnly"></div>
 
@@ -35,8 +35,14 @@
 
                     <div class="form-group">
                         <h5><label asp-for="Kanban" class="col-form-label"></label></h5>
-                        <input asp-for="Kanban" type="text" class="form-control" />
+                        <select asp-for="Kanban" asp-items="@(new SelectList(Model.KanbanList, "KanbanId","Name"))">
+                        </select>
                     </div>
+
+                    @*<div class="form-group">
+                            <h5><label asp-for="Kanban" class="col-form-label"></label></h5>
+                            <input asp-for="Kanban" type="text" class="form-control" />
+                        </div>*@
 
 
                     @* Te dane beda zapisane w sesji *@
@@ -53,9 +59,9 @@
                         </div>
                     </div>
 
+                </div>
             </form>
         </div>
     </div>
-</div>
 </div>
 
