dodanie walidacji do okienka modal przy dodawaniu nowego taska

--- a/Calendarro/Views/Project/AddNewProject.cshtml
+++ b/Calendarro/Views/Project/AddNewProject.cshtml
@@ -34,7 +34,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Powrót</a>
+    <a asp-action="Index" class="bg-danger">Powrót</a>
 </div>
 
 @section Scripts{
