--- a/Calendarro/Views/Home/Index.cshtml
+++ b/Calendarro/Views/Home/Index.cshtml
@@ -75,6 +75,7 @@
 
 
 @section Scripts{
+
     <link href="~/lib/fullcalendar/main.min.css" rel="stylesheet" />
     <script src="~/lib/fullcalendar/main.min.js"></script>
 
@@ -85,7 +86,6 @@
     <script src="~/js/calendarViewHexagonal.js"></script>
 
     <script src="~/js/buttonViewChanger.js"></script>
-
 
     <script>
         (function () {
@@ -107,5 +107,16 @@
         })();
     </script>
 
-
+    <script>
+        function validateInputForm() {
+            var el = document.getElementById('taskname').value;
+            if (el.length > 4) {
+                var btn = document.getElementById('submitNewTask');
+                btn.disabled = false;
+            } else {
+                var btn = document.getElementById('submitNewTask');
+                btn.disabled = true;
+            }
+        }
+    </script>
 }
