poprawa liku do pobierania taskow z bazy

--- a/Calendarro/Views/Home/Index.cshtml
+++ b/Calendarro/Views/Home/Index.cshtml
@@ -81,9 +81,14 @@
 
     <script src="~/js/calendarMonthGenerator.js"></script>
 
-    <script src="~/js/calendarViewSingle.js"></script>
+    <script src="~/js/calendarViewSingle.js">
+    </script>
     <script src="~/js/calendarViewTripple.js"></script>
     <script src="~/js/calendarViewHexagonal.js"></script>
+
+    <script type="text/javascript">
+        _projId = @ViewBag.ProjectIdForGenerateTasks;
+   </script>
 
     <script src="~/js/buttonViewChanger.js"></script>
 
