--- a/Calendarro/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/Calendarro/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -7,7 +7,7 @@
 <h1>@ViewData["Title"]</h1>
 <h4>Reset your password.</h4>
 <hr />
-<div class="row">
+<div class="row bg-danger">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
