--- a/Calendarro/Views/Project/AddNewProject.cshtml
+++ b/Calendarro/Views/Project/AddNewProject.cshtml
@@ -4,26 +4,26 @@
     ViewData["Title"] = "AddNewProject";
 }
 
-<h1>Nowy projekt</h1>
+<div class="text-center"><h1>Nowy projekt</h1></div>
 
 <hr />
-<div class="row">
-    <div class="col-md-4 offset-md-4">
+<div class="row d-flex justify-content-center text-center">
+    <div class="col-md-4 bg-secondary rounded">
         <form asp-action="AddNewProject">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="ProjectName" class="control-label"></label>
-                <input asp-for="ProjectName" class="form-control" />
+            <div class="form-group text-center">
+                @*<label asp-for="ProjectName" class="control-label"></label>*@
+                <input asp-for="ProjectName" class="form-control" placeholder="Nazwa projektu"/>
                 <span asp-validation-for="ProjectName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="FinishDate" class="control-label"></label>
+            <div class="form-group text-center">
+                @*<label asp-for="FinishDate" class="control-label"></label>*@
                 <input asp-for="FinishDate" class="form-control" />
                 <span asp-validation-for="FinishDate" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+            <div class="form-group text-center">
+                @*<label asp-for="Description" class="control-label"></label>*@
+                <input asp-for="Description" class="form-control" placeholder="Opis (opcjonalny)" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group w-100 text-center">
@@ -34,7 +34,7 @@
 </div>
 
 <div>
-    <a asp-action="Index" class="bg-danger">Powrót</a>
+    <a asp-action="Index" id="bck" class="bg-secondary rounded">Powrót</a>
 </div>
 
 @section Scripts{
