--- a/Calendarro/wwwroot/css/site.css
+++ b/Calendarro/wwwroot/css/site.css
@@ -141,22 +141,23 @@ body {
     background-color: gray;
     border: 5px solid dimgray;
     border-radius: 10px;
+    height: 300px;
+    float: left;
+    margin-bottom: 10px;
+    margin-right: 5px;
 }
 
-    .sqr:after {
+    /*.sqr:after {
         content: "";
         display: block;
         padding-bottom: 100%;
-    }
+    }*/
 
 .title {
-    margin-top: auto;
     font-weight: bold;
     color: white;
     text-align: center;
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    margin: 0px;
 }
 
 .calendar_buttons {
@@ -211,6 +212,7 @@ a.btns {
 .dropdown {
     position: relative;
     display: inline-block;
+    float: right;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -302,4 +304,9 @@ a.btns {
 
 #bck {
     padding: 10px;
+}
+
+.content {
+    overflow: auto;
+    overflow-x: hidden;
 }
