--- a/Calendarro/Views/Home/Index.cshtml
+++ b/Calendarro/Views/Home/Index.cshtml
@@ -33,8 +33,12 @@
                         <div class="content">
                             @foreach (var task in kanban.Tasks)
                             {
-                                <div>
-                                    @task.TaskName
+                                <div class="row" style="margin-left: 5px;">
+                                    <form method="post" asp-action="RemoveTaskFromKanban" asp-controller="Home">
+                                        <input type="hidden" name="taskId" value="@task.TaskId"/>
+                                        <button class="w-100 bg-transparent" type="submit" id="deleteTask">-</button>
+                                    </form>
+                                    <label>@task.TaskName</label>
                                 </div>
                             }
                         </div>
@@ -88,7 +92,7 @@
 
     <script type="text/javascript">
         _projId = @ViewBag.ProjectIdForGenerateTasks;
-   </script>
+    </script>
 
     <script src="~/js/buttonViewChanger.js"></script>
 
