--- a/Calendarro/Views/Home/Index.cshtml
+++ b/Calendarro/Views/Home/Index.cshtml
@@ -25,7 +25,11 @@
                                     <button class="kanbandropbtn">...</button>
                                     <div class="kanbandrop-content">
                                         <a href="#">Dodaj zadanie</a>
-                                        <a href="#">Usuń kanban</a>
+
+                                        <form method="post" asp-action="RemoveKanban" asp-controller="Home">
+                                            <input type="hidden" name="kanbanId" value="@kanban.Kanban.KanbanId" />
+                                            <button class="btn" type="submit" id="deleteTask">Usuń kanban</button>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
