--- a/Calendarro/Views/Home/Index.cshtml
+++ b/Calendarro/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
 
                                         <form method="post" asp-action="RemoveKanban" asp-controller="Home">
                                             <input type="hidden" name="kanbanId" value="@kanban.Kanban.KanbanId" />
-                                            <button class="btn" type="submit" id="deleteTask">Usuń kanban</button>
+                                            <button class="btn" type="submit" id="deleteKanban">Usuń kanban</button>
                                         </form>
                                     </div>
                                 </div>
@@ -39,8 +39,11 @@
                             {
                                 <div class="row" style="margin-left: 5px;">
                                     <form method="post" asp-action="RemoveTaskFromKanban" asp-controller="Home">
-                                        <input type="hidden" name="taskId" value="@task.TaskId"/>
-                                        <button class="w-100 bg-transparent" type="submit" id="deleteTask">-</button>
+                                        <input type="hidden" name="taskId" value="@task.TaskId" />
+                                        @*<button class="w-100 bg-transparent" type="submit" id="deleteTask">-</button>*@
+                                        <button type="submit" class="close" aria-label="Close" id="deleteTask">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
                                     </form>
                                     <label>@task.TaskName</label>
                                 </div>
@@ -53,14 +56,14 @@
         </div>
         <div class="column" style="border-left: 5px solid dimgray">
 
-            <div class="container">
-                <button class="btn btn-outline-primary" id="calendaView-1">1</button>
-                <button class="btn btn-outline-primary" id="calendaView-3">3</button>
-                <button class="btn btn-outline-primary" id="calendaView-6">6</button>
-            </div>
 
             <div class="container" id="calendarContainer">
 
+                <div>
+                    <button class="btn btn-outline-primary" id="calendaView-1">1</button>
+                    <button class="btn btn-outline-primary" id="calendaView-3">3</button>
+                    <button class="btn btn-outline-primary" id="calendaView-6">6</button>
+                </div>
                 <div id="singleView">
                     <partial name="_CalendarView1" />
                 </div>
