--- a/Calendarro/wwwroot/css/site.css
+++ b/Calendarro/wwwroot/css/site.css
@@ -206,6 +206,8 @@ a.btns {
     font-size: 16px;
     border: none;
     font-weight: bold;
+    padding: 10px;
+    min-width: 160px;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -223,20 +225,24 @@ a.btns {
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    width: inherit;
+    border-radius: 10px;
+    border: 1px solid dimgray;
 }
 
     /* Links inside the dropdown */
-    .dropdown-content a {
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-    }
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
 
-        /* Change color of dropdown links on hover */
-        .dropdown-content a:hover {
-            background-color: grey;
-        }
+    /* Change color of dropdown links on hover */
+    .dropdown-content a:hover {
+        background-color: grey;
+        border-radius: 10px;
+    }
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
@@ -314,7 +320,7 @@ a.btns {
 #deleteTask {
     text-align: right;
     padding: 1px;
-    height: 15px;
-    width: 15px;
     position: center;
+    font-size: 1.2rem;
+    color: red;
 }
