Poprawiono nazewnictwo, dodano okno modalne (do zaimplementowania)

--- a/Calendarro/Views/Home/Index.cshtml
+++ b/Calendarro/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
                                 <div class="dropdown">
                                     <button class="kanbandropbtn">...</button>
                                     <div class="kanbandrop-content">
-                                        <a href="#">Dodaj zadanie</a>
+                                        @*<a href="#">Dodaj zadanie</a>*@
 
                                         <form method="post" asp-action="RemoveKanban" asp-controller="Home">
                                             <input type="hidden" name="kanbanId" value="@kanban.Kanban.KanbanId" />
