--- a/Calendarro/Views/Shared/_LoginPartial.cshtml
+++ b/Calendarro/Views/Shared/_LoginPartial.cshtml
@@ -10,6 +10,14 @@
     @if (SignInManager.IsSignedIn(User))
     {
         <li>
+            @if (HomeController._currentProject.ProjectName != null)
+            {
+                <form asp-action="AddNewKanban" asp-controller="Home" method="get">
+                    <button class="button">Add new kanban</button>
+                </form>
+            }
+        </li>
+        <li>
             <form asp-action="AddNewProject" asp-controller="Project" method="get">
                 <button class="button">Add new project</button>
             </form>
@@ -51,14 +59,14 @@
                 <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
             </form>
         </li>
-    }
-    else
-    {
+        }
+        else
+        {
         <li class="nav-item">
             <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Zarejestruj</a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Zaloguj</a>
         </li>
-    }
-</ul>
+        }
+    </ul>
