--- a/Calendarro/Views/Home/NoProjectFound.cshtml
+++ b/Calendarro/Views/Home/NoProjectFound.cshtml
@@ -3,5 +3,12 @@
     ViewData["Title"] = "NoProjectFound";
 }
 
-<h1>NoProjectFound</h1>
-
+<div class="card text-center pt-3 pb-3 mt-5">
+    <div class="card-body">
+        <h2 class="card-title pb-1">Brak projektów</h2>
+        <hr />
+        <p class="card-text pt-1 ">
+        Aktualnie nie masz żadnych projektów. Możesz dodać nowy projekt za pomocą przycisku na navbarze.
+        </p>
+    </div>
+</div>
