dodanie responsywnego okna glownego

--- a/Calendarro/Views/Home/Index.cshtml
+++ b/Calendarro/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div class="row">
+    <div class="row" id="responsive-div">
         <div class="column" style="border-right: 5px solid dimgray">
             <div class="boards">
                 @foreach (var kanban in Model.KanbanWithTasks)
