--- a/Calendarro/Views/Shared/_LoginPartial.cshtml
+++ b/Calendarro/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
     {
-        <li>
+        <li class="nav-item">
             @if (HomeController._currentProject?.ProjectName != null)
             {
                 <form asp-action="AddNewKanban" asp-controller="Home" method="get">
@@ -17,12 +17,12 @@
                 </form>
             }
         </li>
-        <li>
+        <li class="nav-item">
             <form asp-action="AddNewProject" asp-controller="Project" method="get">
                 <button class="button">Add new project</button>
             </form>
         </li>
-        <li>
+        <li class="nav-item">
             <div class="dropdown">
                 <button class="dropbtn">
                     @if (HomeController._currentProject?.ProjectName != null)
@@ -56,7 +56,7 @@
         </li>
         <li class="nav-item">
             <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                <button id="logout" type="submit" class="nav-link btn btn-outline-danger text-dark btn-block">Logout</button>
             </form>
         </li>
         }
