--- a/Calendarro/Views/Shared/_Layout.cshtml
+++ b/Calendarro/Views/Shared/_Layout.cshtml
@@ -9,17 +9,17 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-md navbar-toggleable-md navbar-light bg-white border-bottom box-shadow mb-3" id="navbarHolder">
+        <nav class="navbar navbar-expand-lg navbar-toggleable-lg navbar-light bg-white border-bottom box-shadow mb-3" id="navbarHolder">
             <div class="container"> 
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="white-space: nowrap">Calendarro</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-md-inline-flex justify-content-between text-center">
+                <div class="navbar-collapse collapse d-lg-inline-flex justify-content-between text-center">
                     <ul class="navbar-nav flex-grow-1 text-center">
-                        <partial name="_LoginPartial" />
                     </ul>
+                        <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
