dodanie widoku partial jezeli user nie ma zadnych kanbanow

--- a/Calendarro/Views/Home/NoProjectFound.cshtml
+++ b/Calendarro/Views/Home/NoProjectFound.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "NoProjectFound";
+    ViewData["Title"] = "Brak projektów";
 }
 
 <div class="card text-center pt-3 pb-3 mt-5">
