zapis aktualnego postepu

--- a/Calendarro/Views/Shared/_Layout.cshtml
+++ b/Calendarro/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted" id="footerHolder">
+    <footer class="border-top footer text-muted" id="footerHolder" style="bottom: 0px;">
         <div class="container text-center">
             &copy; 2021 - Calendarro - <a asp-area="" asp-controller="Home" asp-action="Privacy">Kontakt</a>
         </div>
