--- a/Calendarro/Views/Shared/_LoginPartial.cshtml
+++ b/Calendarro/Views/Shared/_LoginPartial.cshtml
@@ -24,7 +24,7 @@
         </li>
         <li class="nav-item">
             <div>
-                <div @*class="dropdown"*@> @* co to jest? przesuwa na lewo wrr *@
+                <div class="dropdown"> @* co to jest? przesuwa na lewo wrr *@
                     <button class="dropbtn">
                         @if (HomeController._currentProject?.ProjectName != null)
                         {
